--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,17 +10,18 @@ docker-build:
       - docker login -u "$CI_DOCKER_HUB_USER" -p "$CI_DOCKER_HUB_PASSWORD" docker.io
    script:
       - export DOCKER_CLI_EXPERIMENTAL=enabled
+      - export VERSION = $(cat lcarlon_VERSION)
       - docker run --privileged --rm tonistiigi/binfmt --install all
-      - docker buildx create --name gitea_builder --use --platform linux/arm64/v8,linux/386,linux/arm/v7,linux/arm/v6 --driver-opt network=host
-      - docker buildx build --push --platform linux/arm/v6 -t carlonluca/gitea:$VERSION-armv6 .
-      - docker buildx build --push --platform linux/arm/v7 -t carlonluca/gitea:$VERSION-armv7 .
-      - docker buildx build --push --platform linux/arm64/v8 -t carlonluca/gitea:$VERSION-armv8 .
-      - docker buildx build --push --platform linux/amd64 -t carlonluca/gitea:$VERSION-amd64 .
-      - docker buildx build --push --platform linux/386 -t carlonluca/gitea:$VERSION-386 .
-      - docker buildx imagetools create -t carlonluca/gitea:$VERSION carlonluca/gitea:$VERSION-armv6 carlonluca/gitea:$VERSION-armv7 carlonluca/gitea:$VERSION-armv8 carlonluca/gitea:$VERSION-amd64 carlonluca/gitea:$VERSION-386
-      - docker push carlonluca/gitea:$VERSION
-      - docker image rm carlonluca/gitea:$VERSION carlonluca/gitea:$VERSION-armv6 carlonluca/gitea:$VERSION-armv7 carlonluca/gitea:$VERSION-armv8 carlonluca/gitea:$VERSION-amd64 carlonluca/gitea:$VERSION-386
-      - docker buildx stop gitea_builder
-      - docker buildx rm gitea_builder
+      - docker buildx create --name mybuilder --use --platform linux/arm64/v8,linux/386,linux/arm/v7,linux/arm/v6,linux/amd64
+      - docker buildx build --platform linux/arm/v6 -t carlonluca/gitea:$VERSION-armv6 .
+      - docker buildx build --platform linux/arm/v7 -t carlonluca/gitea:$VERSION-armv7 .
+      - docker buildx build --platform linux/386 -t carlonluca/gitea:$VERSION-386 .
+      - docker buildx build --platform linux/arm64/v8 -t carlonluca/gitea:$VERSION-armv8 .
+      - docker buildx build --platform linux/amd64 -t carlonluca/gitea:$VERSION-amd64 .
+      - docker manifest create carlonluca/gitea:$VERSION --amend carlonluca/gitea:$VERSION-armv6 --amend carlonluca/gitea:$VERSION-armv7 --amend carlonluca/gitea:$VERSION-386 --amend carlonluca/gitea:$VERSION-armv8 --amend carlonluca/gitea:$VERSION-amd64
+      - docker manifest push carlonluca/gitea:$VERSION
+      - docker manifest push carlonluca/gitea:latest
+      - docker buildx stop mybuilder
+      - docker buildx rm mybuilder
    rules:
       - when: manual
