--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ stages:
    - build
 
 docker-build:
-   image: carlonluca/docker-multiarch:dev
+   image: carlonluca/docker-multiarch:latest
    stage: build
    services:
       - docker:dind
