--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,10 +15,9 @@ docker-build:
       - docker buildx create --name mybuilder --use --platform linux/arm64/v8,linux/386,linux/arm/v7,linux/arm/v6,linux/amd64
       - docker buildx build --platform linux/arm/v6 -t carlonluca/gitea:$VERSION-armv6 .
       - docker buildx build --platform linux/arm/v7 -t carlonluca/gitea:$VERSION-armv7 .
-      - docker buildx build --platform linux/386 -t carlonluca/gitea:$VERSION-386 .
       - docker buildx build --platform linux/arm64/v8 -t carlonluca/gitea:$VERSION-armv8 .
       - docker buildx build --platform linux/amd64 -t carlonluca/gitea:$VERSION-amd64 .
-      - docker manifest create carlonluca/gitea:$VERSION --amend carlonluca/gitea:$VERSION-armv6 --amend carlonluca/gitea:$VERSION-armv7 --amend carlonluca/gitea:$VERSION-386 --amend carlonluca/gitea:$VERSION-armv8 --amend carlonluca/gitea:$VERSION-amd64
+      - docker manifest create carlonluca/gitea:$VERSION --amend carlonluca/gitea:$VERSION-armv6 --amend carlonluca/gitea:$VERSION-armv7 --amend carlonluca/gitea:$VERSION-armv8 --amend carlonluca/gitea:$VERSION-amd64
       - docker manifest push carlonluca/gitea:$VERSION
       - docker manifest push carlonluca/gitea:latest
       - docker buildx stop mybuilder
